src/commands/monitor/tests/snapshots/pmoke__commands__monitor__tests__snapshots__dashboard_wide.snap
---
source: src/commands/monitor/tests/snapshots.rs
expression: rendered
---
 pmoke  ● BLOCKED  │  IDLE  │  00:00                                                                                    
 └─ ◆ cwd /workspace/pmoke  │  config config.toml ──────────────────────────────────────────────────────────────────────
┌ RUNS 0/0 ────────────┐┌ INSPECTOR · SUMMARY ─────────────────────────────────────────────────────────────────────────┐
│no run dirs under scan││READY   Config                                                                                │
│                      ││Print normalized config and diagnostics.                                                      │
│                      ││command  pmoke --config config.toml show                                                      │
│                      ││panel    Read-only config panel. Enter re-runs `show` through the re-exec runner; nothing is  │
│                      ││written.                                                                                      │
└──────────────────────┘│                                                                                              │
┌ WORKFLOW 02/12 ──────┐│                                                                                              │
│  ▾ UTILITIES         │└──────────────────────────────────────────────────────────────────────────────────────────────┘
│▌    ●  show OK       │╭ ACTIVITY · LIVE · READY ─────────────────────────────────────────────────────────────────────╮
│     ●  doctor OK     ││ READY  events 1  ·  following                                                                │
│     ·  raw verify -- ││ timeline idle                                                                                │
│  ▾ ANALYSIS          ││                                                                                              │
│     ·  reference --  ││──────────────────────────────────────────────────────────────────────────────────────────────│
│     ·  sensor --     ││SYS   snapshot probe line                                                                     │
│     ·  li --         ││                                                                                              │
│     ·  signal --     ││                                                                                              │
│     ·  phase --      ││                                                                                              │
│     ·  moke --       ││                                                                                              │
│     ·  analyze --    ││                                                                                              │
│                      ││                                                                                              │
└──────────────────────┘│                                                                                              │
┌ DETAIL show ─────────┐│                                                                                              │
│Print normalized      ││                                                                                              │
│config and            ││                                                                                              │
│diagnostics.          ││                                                                                              │
└──────────────────────┘╰──────────────────────────────────────────────────────────────────────────────────────────────╯
Enterrun    j/kmove    /filter    1-4focus    [ ]history    ?help    qquit    [workflow]
