src/commands/monitor/tests/snapshots/pmoke__commands__monitor__tests__snapshots__reports_empty.snap
---
source: src/commands/monitor/tests/snapshots.rs
expression: rendered
---
 pmoke  ● BLOCKED  │  IDLE  │  00:00                                                                                    
 └─ ◆ cwd /workspace/pmoke  │  config config.toml ──────────────────────────────────────────────────────────────────────
┌ RUNS 0/0 ────────────┐┌ REPORTS ─────────────────────────────────────────────────────────────────────────────────────┐
│no run dirs under scan││No recorded run selected.                                                                     │
│                      ││root  /workspace/pmoke                                                                        │
│                      ││scan  budgets 512 dirs / 3 deep / 200 runs                                                    │
│                      ││hint  press 4/b to focus the runs browser                                                     │
│                      ││                                                                                              │
└──────────────────────┘│                                                                                              │
┌ WORKFLOW 02/12 ──────┐│                                                                                              │
│  ▾ UTILITIES         │└──────────────────────────────────────────────────────────────────────────────────────────────┘
│▌    ●  show OK       │╭ ACTIVITY · LIVE · READY ─────────────────────────────────────────────────────────────────────╮
│     ●  doctor OK     ││ READY  events 1  ·  following                                                                │
│     ·  raw verify -- ││ timeline idle                                                                                │
│  ▾ ANALYSIS          ││                                                                                              │
│     ·  reference --  ││──────────────────────────────────────────────────────────────────────────────────────────────│
│     ·  sensor --     ││SYS   snapshot probe line                                                                     │
│     ·  li --         ││                                                                                              │
│     ·  signal --     ││                                                                                              │
│     ·  phase --      ││                                                                                              │
│     ·  moke --       ││                                                                                              │
│     ·  analyze --    ││                                                                                              │
│                      ││                                                                                              │
└──────────────────────┘│                                                                                              │
┌ DETAIL show ─────────┐│                                                                                              │
│Print normalized      ││                                                                                              │
│config and            ││                                                                                              │
│diagnostics.          ││                                                                                              │
└──────────────────────┘╰──────────────────────────────────────────────────────────────────────────────────────────────╯
itabs    1-5tab    j/kscroll    Tab/Right/lfocus    [ ]history    ?help    qquit    [inspector]
