src/commands/monitor/tests/snapshots/pmoke__commands__monitor__tests__snapshots__runs_focused.snap
---
source: src/commands/monitor/tests/snapshots.rs
expression: rendered
---
 pmoke  ● BLOCKED  │  IDLE  │  00:00                                                                                    
 └─ ◆ cwd /workspace/pmoke  │  config config.toml ──────────────────────────────────────────────────────────────────────
┌ RUNS 0/0 ────────────┐┌ INSPECTOR · RUN ─────────────────────────────────────────────────────────────────────────────┐
│no run dirs under scan││No recorded runs under the scan root.                                                         │
│                      ││root  /workspace/pmoke                                                                        │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
└──────────────────────┘│                                                                                              │
┌ WORKFLOW 02/12 ──────┐│                                                                                              │
│  ▾ UTILITIES         │└──────────────────────────────────────────────────────────────────────────────────────────────┘
│▌    ●  show OK       │╭ ACTIVITY · LIVE · READY ─────────────────────────────────────────────────────────────────────╮
│     ●  doctor OK     ││ READY  events 1  ·  following                                                                │
│     ·  raw verify -- ││ timeline idle                                                                                │
│  ▾ ANALYSIS          ││                                                                                              │
│     ·  reference --  ││──────────────────────────────────────────────────────────────────────────────────────────────│
│     ·  sensor --     ││SYS   snapshot probe line                                                                     │
│     ·  li --         ││                                                                                              │
│     ·  signal --     ││                                                                                              │
│     ·  phase --      ││                                                                                              │
│     ·  moke --       ││                                                                                              │
│     ·  analyze --    ││                                                                                              │
│                      ││                                                                                              │
└──────────────────────┘│                                                                                              │
┌ DETAIL show ─────────┐│                                                                                              │
│Print normalized      ││                                                                                              │
│config and            ││                                                                                              │
│diagnostics.          ││                                                                                              │
└──────────────────────┘╰──────────────────────────────────────────────────────────────────────────────────────────────╯
/filter    j/kmove    Enterpreview    Tab/Right/lfocus    [ ]history    ?help    qquit    [runs]
